--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -1,4 +1,9 @@
-﻿@using System.Net.Http
+﻿@*-----------------------------------------------------------------------------
+// FILE:	    _Imports.razor
+// CONTRIBUTOR: Marcus Bowyer
+// COPYRIGHT:   Copyright (c) 2005-2021 by neonFORGE LLC.  All rights reserved.*@
+
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
