--- a/Services/neon-dashboard/Pages/PageBase.razor
+++ b/Services/neon-dashboard/Pages/PageBase.razor
@@ -8,5 +8,5 @@
 <PageTitle>@PageTitle</PageTitle>
 
 <HeadContent>
-    <meta name="description" content="@Description", foo="@Testaroo">
+    <meta name="description" content="@Description">
 </HeadContent>
