--- a/Services/neon-dashboard/Shared/Components/Dashboard.razor
+++ b/Services/neon-dashboard/Shared/Components/Dashboard.razor
@@ -4,5 +4,5 @@
 // COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
 <div style="height:1000px; width:100%;">
-    <iframe src="@Uri" title="@Description" style="height:100%; width:100%; visibility: @(IsVisible ? "visible" : "hidden");"></iframe>
+    <iframe src="@Uri" title="@Description" style="height:100%; width:100%; visibility: @(IsVisible ? 'visible' : 'hidden');"></iframe>
 </div>
