[services]: Added exception logging in program entry points to capture problems that occure before the service starts and also made a few changes to align our implentations.

--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -24,7 +24,7 @@
 @using Blazor.Analytics.Components
 
 @inject AppState AppState
-@inject NeonDashboardService NeonDashboardService
+@inject Service NeonDashboardService
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JS
 @inject Blazor.Analytics.IAnalytics Analytics
