--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -19,18 +19,13 @@
     <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
 </div> 
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
+<div class="container">
+    <main class="main">
         <div class="content px-4">
             @Body
         </div>
+    </main>
+     <div class="bottombar">
+        <NavMenu />
     </div>
 </div>
