--- a/Services/neon-dashboard/Styles/index.scss
+++ b/Services/neon-dashboard/Styles/index.scss
@@ -1,4 +1,9 @@
-﻿@use 'variables';
+﻿/*-----------------------------------------------------------------------------
+// FILE: index.css
+// CONTRIBUTOR: Simon Zhang
+// COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/
+
+@use 'variables';
 
 @use 'normalize';
 
