fix sass toolbin, get things running

--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -25,7 +25,7 @@
             @Body
         </div>
     </main>
-     <div class="bottombar">
+     <div class="bottom">
         <NavMenu />
     </div>
 </div>
