--- a/Services/neon-dashboard/Shared/MainLayout.razor.css
+++ b/Services/neon-dashboard/Shared/MainLayout.razor.css
@@ -3,17 +3,22 @@
 // CONTRIBUTOR: Marcus Bowyer, Simon Zhang
 // COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/
 
+
 .container {
     display: grid;
-    grid-template-rows: auto 5rem;
+    grid-template-rows: 1fr auto;
     height: 100%;
-
 }
 
 .main {
     grid-row: 1;
+    height: 100%;
 }
 
-.bottombar {
+.bottom {
+    padding: 0 var(--f3);
     grid-row: 2;
+    background: var(--c-bg);
+    display: flex;
+    color: var(--c-fg);
 }
