--- a/Services/neon-dashboard/Shared/Components/Icon.razor
+++ b/Services/neon-dashboard/Shared/Components/Icon.razor
@@ -1,4 +1,34 @@
-﻿
+﻿@using System.Text.Json;
+@using System.IO;
+@using System; 
+
+@using Neon.Common;
+
+<div class="icon">
+    @((MarkupString)icon)
+
+</div>
 
 @code {
+    /// <summary>
+    /// type of icon to display
+    /// </summary>
+    [Parameter]
+    public string type { get; set; }
+
+    /// <summary>
+    /// the svg icon in markup
+    /// </summary>
+    private MarkupString icon;
+
+
+    /// <summary>
+    /// fetch on init.
+    /// </summary>
+    protected override void OnInitialized()
+    {
+        string iconstring = Path.Combine(@"Icons/",$"{type}.svg");
+        string path = Path.Combine($"{AppState.WebHostEnvironment.WebRootPath}/", iconstring);
+        icon = (MarkupString)File.ReadAllText(path) ;
+    }
 }
