dashboard dropup component

--- a/Services/neon-dashboard/Pages/_Host.cshtml
+++ b/Services/neon-dashboard/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
 ﻿@*-----------------------------------------------------------------------------
 // FILE:	    _Host.cshtml
-// CONTRIBUTOR: Marcus Bowyer
+// CONTRIBUTOR: Marcus Bowyer, Simon Zhang
 // COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
 @page "/"
@@ -17,8 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>neon-dashboard</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    
+    <link href="css/index.css" rel="stylesheet" />
     <link href="neon-dashboard.styles.css" rel="stylesheet" />
 </head>
 <body>
