--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -5,7 +5,21 @@
 
 @inherits LayoutComponentBase
 
-<div class="top-row px-4">
+<div class="mainlayout" >
+  
+
+  <div class="container">
+      <main class="main">
+              @Body
+      </main>
+       <div class="bottom">
+          <BottomMenu />
+      </div>
+  </div>
+
+</div>
+
+<div class="top-row px-4" style="display: none">
     <AuthorizeView>
         <Authorized>
             <form method="get" action="logout">
@@ -17,13 +31,4 @@
         </NotAuthorized>
     </AuthorizeView>
     <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-</div> 
-
-<div class="container">
-    <main class="main">
-            @Body
-    </main>
-     <div class="bottom">
-        <NavMenu />
-    </div>
-</div>
+  </div> 
