--- a/Services/neon-dashboard/Shared/MainLayout.razor.css
+++ b/Services/neon-dashboard/Shared/MainLayout.razor.css
@@ -4,6 +4,12 @@
 // COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/
 
 
+.mainlayout {
+    margin: 0;
+    height: 100vh;
+    background: var(--c-bg-dark);
+}
+
 .container {
     display: grid;
     grid-template-rows: 1fr auto;
@@ -13,6 +19,9 @@
 .main {
     grid-row: 1;
     height: 100%;
+    border-radius: var(--f1);
+    background: var(--c-fg);
+    border: 2px solid var(--c-bg-dark);
 }
 
 .bottom {
