--- a/Services/neon-dashboard/Styles/_variables.scss
+++ b/Services/neon-dashboard/Styles/_variables.scss
@@ -3,7 +3,6 @@
     --c-bg: #232323;
     --c-bg-dark: #333;
     --c-fg: #eee;
-
     //typescale
     --base: 16px;
     --f1: 0.625rem;
@@ -11,4 +10,5 @@
     --f3: 0.875rem;
     --f4: 1.062rem;
     --f5: 1.5rem;
+    --shadow: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
 }
