--- a/Services/neon-dashboard/Shared/Components/Dashboard.razor
+++ b/Services/neon-dashboard/Shared/Components/Dashboard.razor
@@ -3,6 +3,6 @@
 // CONTRIBUTOR: Marcus Bowyer
 // COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
-<div style="height:1000px; width:100%;">
-    <iframe src="@Uri" title="@Description" style="height:100%; width:100%; visibility: @(IsVisible ? "visible" : "hidden");"></iframe>
+<div class="dashboard-frame" style="height:@Height; width:@Width; position: absolute; top: 0; left: 0;">
+    <iframe src="@Uri" title="@Description" style="height:100%; width:100%; overflow:hidden; border:none; margin:0; padding:0; visibility: visible;"></iframe>
 </div>
