--- a/Services/neon-dashboard/Shared/Components/Icon.razor
+++ b/Services/neon-dashboard/Shared/Components/Icon.razor
@@ -1,12 +1,11 @@
-﻿@using System.Text.Json;
+@using System.Text.Json;
 @using System.IO;
 @using System; 
 
 @using Neon.Common;
 
 <div class="icon">
-    @((MarkupString)icon)
-
+    @((MarkupString)content)
 </div>
 
 @code {
@@ -14,21 +13,5 @@
     /// type of icon to display
     /// </summary>
     [Parameter]
-    public string type { get; set; }
-
-    /// <summary>
-    /// the svg icon in markup
-    /// </summary>
-    private MarkupString icon;
-
-
-    /// <summary>
-    /// fetch on init.
-    /// </summary>
-    protected override void OnInitialized()
-    {
-        string iconstring = Path.Combine(@"Icons/",$"{type}.svg");
-        string path = Path.Combine($"{AppState.WebHostEnvironment.WebRootPath}/", iconstring);
-        icon = (MarkupString)File.ReadAllText(path) ;
-    }
+    public string content { get; set; }
 }
