--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -3,6 +3,7 @@
 // CONTRIBUTOR: Marcus Bowyer
 // COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
+@using System.Diagnostics.CodeAnalysis
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Http
