--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -31,3 +31,4 @@
 @inject Blazor.Analytics.IAnalytics Analytics
 @inject IHttpContextAccessor httpContextAccessor
 @inject INeonLogger neonLogger
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
