moved dashboard bottom button to right side

--- a/Services/neon-dashboard/Shared/Components/BottomMenu.razor
+++ b/Services/neon-dashboard/Shared/Components/BottomMenu.razor
@@ -1,7 +1,5 @@
-﻿<div class="button">
-		<Icon content=@Icons.Settings />
-</div>
-
+﻿
+w
 <DropUp Title="Dashboard" Active=@AppState.CurrentDashboard Icon=@Icons.Server Items=@AppState.Dashboards >
      <DropList Context="dashboard">
       <div></div>
@@ -10,3 +8,7 @@
 			</div>
     </DropList>
 </DropUp>
+
+<div class="button">
+		<Icon content=@Icons.Settings />
+</div>
