--- a/Services/neon-dashboard/Shared/Components/DropUp.razor
+++ b/Services/neon-dashboard/Shared/Components/DropUp.razor
@@ -1,37 +1,37 @@
-﻿
+﻿@*-----------------------------------------------------------------------------
+// FILE:	      DropUp.razor
+// CONTRIBUTOR: Marcus Bowyer, Simon Zhang
+// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
-<div class="dropup__wrapper relative">
-  <div class="dropup button" @onclick="Show">
-	  <Icon content=@Icon />
-	  <div class="noselect name">
-		  <p>@Title</p>
-		  <h3>@Active</h3>
-	  </div>
-	  <Icon content=@Icons.ChevronUp />
-  </div>
-	
-
-  <div class="absolute menu @(HideMenu ? "hide" : "")" @onmouseover="MouseIn" @onmouseout="MouseOut">
-			<div class="menu-header button__icon" @onmouseout:stopPropagation>
-		  <Icon content=@Icon />
-				<h3>@Title</h3>
-			</div>
-		  @foreach (var item in Items)
-        {
-            if (DropList is not null)
-            {
-                <div class="button button__icon" @onmouseout:stopPropagation @onclick="@(() => NavigationManager.NavigateTo(item.GetId()))">
-									<h3>@item.GetName()</h3>
-									@if (item.GetId() == AppState.CurrentDashboard)
-									{
-										  <div style="right: 20px;position: absolute;">
-												<Icon content=@Icons.Check />
-											</div>
-									}
-								</div>
-
-            }
-        }
-				
+<div class="dropup__wrapper relative" @onmouseenter="MouseIn" @onmouseleave="MouseOut">
+	<div class="dropup button" @onclick="Show">
+		<Icon content=@Icon />
+		<div class="noselect name">
+			<p>@Title</p>
+			<h3>@Active</h3>
 		</div>
+		<Icon content=@Icons.ChevronUp />
+	</div>
+	
+	<div class="absolute menu @(HideMenu ? "hide" : "")">
+		<div class="menu-header button__icon" @onmouseout:stopPropagation>
+			<Icon content=@Icon />
+			<h3>@Title</h3>
+		</div>
+		@foreach (var item in Items)
+	  {
+		  if (DropList is not null)
+		  {
+			  <div class="button button__icon" @onmouseout:stopPropagation @onclick="@(() => NavigationManager.NavigateTo(item.GetId()))">
+				  <h3>@item.GetName()</h3>
+				  @if (item.GetId() == AppState.CurrentDashboard)
+				  {
+					  <div style="right: 20px;position: absolute;">
+						  <Icon content=@Icons.Check />
+						  </div>
+				  }
+				  </div>
+		  }
+	  }
+	  </div>
 </div>
