Use dashboard Name, not ID in the drop up

--- a/Services/neon-dashboard/Shared/Components/BottomMenu.razor
+++ b/Services/neon-dashboard/Shared/Components/BottomMenu.razor
@@ -1,6 +1,6 @@
 ﻿
 
-<DropUp Title="Dashboard" Active=@AppState.CurrentDashboard Icon=@Icons.Server Items=@AppState.Dashboards >
+<DropUp Title="Dashboard" Active=@AppState.GetCurrentDashboard(AppState.CurrentDashboard) Icon=@Icons.Server Items=@AppState.Dashboards >
      <DropList Context="dashboard">
       <div></div>
 			<div class="">
