--- a/Services/neon-dashboard/Shared/Components/DropUp.razor
+++ b/Services/neon-dashboard/Shared/Components/DropUp.razor
@@ -8,7 +8,7 @@
 		<Icon content=@Icon />
 		<div class="noselect name">
 			<p>@Title</p>
-			<h3>@Active</h3>
+			<h3>@(Active.Name ?? "Loading")</h3>
 		</div>
 		<Icon content=@Icons.ChevronUp />
 	</div>
