added a basic neonkube homepage

--- a/Services/neon-dashboard/Pages/_Host.cshtml
+++ b/Services/neon-dashboard/Pages/_Host.cshtml
@@ -1,41 +1,8 @@
-﻿@*-----------------------------------------------------------------------------
-// FILE:	    _Host.cshtml
-// CONTRIBUTOR: Marcus Bowyer, Simon Zhang
-// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
-
-@page "/"
+﻿@page "/"
 @namespace NeonDashboard.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>neon-dashboard</title>
-    <base href="~/" />
-    
-    <link href="css/index.css" rel="stylesheet" />
-    <link href="neon-dashboard.styles.css" rel="stylesheet" />
-</head>
-<body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
-
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-
-    <script src="_framework/blazor.server.js"></script>
-    <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
-</body>
-</html>
+<component type="typeof(App)" render-mode="ServerPrerendered" />
