--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -14,7 +14,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
+@using Neon.Common
 @using Neon.Diagnostics
+@using Neon.Kube
 
 @using NeonDashboard
 @using NeonDashboard.Pages
