--- a/Services/neon-dashboard/Pages/_Layout.cshtml
+++ b/Services/neon-dashboard/Pages/_Layout.cshtml
@@ -28,5 +28,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
+    <script src="_content/PSC.Blazor.Components.Chartjs/lib/Chart.js/chart.js"></script>
+    <script src="_content/PSC.Blazor.Components.Chartjs/Chart.js"></script>
 </body>
 </html>
