--- a/Services/neon-dashboard/Styles/index.css
+++ b/Services/neon-dashboard/Styles/index.css
@@ -3,9 +3,10 @@
 // CONTRIBUTOR: Simon Zhang
 // COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/
 
-@use 'variables';
 
-@use 'normalize';
-@use 'BlazorFix';
+@import 'tailwind';
+@import 'variables';
 
-@use 'Base';
+@import 'BlazorFix';
+
+@import 'Base';
