fix tailwind build

--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -8,7 +8,7 @@
 
 <PageBase PageTitle="@PageTitle" />
 
-<h1>uwu neonkube!</h1>
+<h1 class="font-sans text-5">uwu neonkube!</h1>
 
 <p>Name: @clusterInfo.Name</p>
 <p>Version: @clusterInfo.ClusterVersion</p>
