--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 @inherits LayoutComponentBase
 
 <div class="mainlayout" >
-  <div class="container">
+  <div class="containermain">
       <main class="main">
               @Body
       </main>
