--- a/Services/neon-dashboard/Shared/MainLayout.razor.css
+++ b/Services/neon-dashboard/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@
     background: var(--c-bg-dark);
 }
 
-.container {
+.containermain {
     display: grid;
     grid-template-rows: 1fr auto;
     overflow: hidden;
