added line chart for memory usage

--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -41,3 +41,8 @@
   </table>
 }
 
+@if (memoryChartConfig != null)
+{
+    <Chart Config="memoryChartConfig" @ref="memoryChart" Style="display: block; box-sizing: border-box; height: 200px; width: 500px;"></Chart>
+}
+
