--- a/Services/neon-dashboard/_Imports.razor
+++ b/Services/neon-dashboard/_Imports.razor
@@ -26,18 +26,7 @@
 @using Blazor.Analytics
 @using Blazor.Analytics.Components
 
-@using PSC.Blazor.Components.Chartjs
-@using PSC.Blazor.Components.Chartjs.Enums
-@using PSC.Blazor.Components.Chartjs.Models
-@using PSC.Blazor.Components.Chartjs.Models.Common
-@using PSC.Blazor.Components.Chartjs.Models.Bar
-@using PSC.Blazor.Components.Chartjs.Models.Bubble
-@using PSC.Blazor.Components.Chartjs.Models.Doughnut
-@using PSC.Blazor.Components.Chartjs.Models.Line
-@using PSC.Blazor.Components.Chartjs.Models.Pie
-@using PSC.Blazor.Components.Chartjs.Models.Polar
-@using PSC.Blazor.Components.Chartjs.Models.Radar
-@using PSC.Blazor.Components.Chartjs.Models.Scatter
+@using ChartJs.Blazor;
 
 @inject AppState AppState
 @inject Service NeonDashboardService
