--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -5,9 +5,9 @@
 
 @inherits LayoutComponentBase
 
-<div class="mainlayout" >
+<div class="mainlayout " >
   <div class="containermain">
-      <main class="main">
+      <main class="main bg-bg text-slate-50 justify-center grid font-sans ">
               @Body
       </main>
        <div class="bottom">
