--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -7,45 +7,61 @@
 @inherits PageBase
 
 <PageBase PageTitle="@PageTitle" />
-<div class="container w-screen grid grid-cols-12 gap-3"> 
+<div class="container w-screen grid grid-cols-12 gap-3 mt-5"> 
 
 </div>
 
 <div class="container w-screen grid grid-cols-12 gap-3">
-  <div class="col-span-8">
-     <h1 class=" text-5">uwu neonkube!</h1>
+  <section class="col-span-8 space-y-2">
+    <div>
+    <label class="text-4 text-slate-300 font-bold" >
+        Current Cluster
+    </label>
+     <h1 class="text-8 mt-[-0.5rem] leading-tight">@clusterInfo.Name</h1>
 
-      <p>Name: @clusterInfo.Name</p>
-      <p>Version: @clusterInfo.ClusterVersion</p>
-      <p>DataCenter: @clusterInfo.Datacenter</p>
-      <p>Hosting Environment: @clusterInfo.HostingEnvironment</p>
-      <p>Domain: @clusterInfo.Domain</p>
+    </div>
+    <div class="flex space-x-4">
+      @if (clusterMetaData != null) {
+        foreach (KeyValuePair<string, string> data in clusterMetaData)
+      {
+      <div>
+        <label class="text-2 text-slate-300" >
+          @data.Key
+        </label>
+        <p class="font-bold leading-tight">@data.Value</p>
+      </div> 
+      }
+      }
+
+  
+    </div>
+   
       <p>CreationTimestamp: @clusterInfo.CreationTimestamp</p>
-      <p>Environment: @clusterInfo.Environment</p>
-  </div>
+           @if (AppState.Kube.Nodes != null)
+      {
+        <table>
+            <tr>
+              <td>Name</td>
+              <td>Status</td>
+            </tr>
+            <tr>
+               <td>Total Nodes</td>
+               <td>@(AppState.Kube?.TotalNodes)</td>
+            </tr>
+            <tr>
+               <td>Active Nodes</td>
+               <td>@(AppState.Kube?.ActiveNodes)</td>
+            </tr>
+            <tr>
+               <td>Failed Nodes</td>
+               <td>@(AppState.Kube?.FailedNodes)</td>
+            </tr>
+        </table>
+      }
+  </section>
 
    <div class="col-start-10 col-end-[-1]">
-     @if (AppState.Kube.Nodes != null)
-{
-  <table>
-      <tr>
-        <td>Name</td>
-        <td>Status</td>
-      </tr>
-      <tr>
-         <td>Total Nodes</td>
-         <td>@(AppState.Kube?.TotalNodes)</td>
-      </tr>
-      <tr>
-         <td>Active Nodes</td>
-         <td>@(AppState.Kube?.ActiveNodes)</td>
-      </tr>
-      <tr>
-         <td>Failed Nodes</td>
-         <td>@(AppState.Kube?.FailedNodes)</td>
-      </tr>
-  </table>
-}
+     <Alerts />
   </div>
  
 
