--- a/Services/neon-dashboard/Shared/Alerts.razor
+++ b/Services/neon-dashboard/Shared/Alerts.razor
@@ -1,5 +1,37 @@
-﻿<h3>Alerts</h3>
+﻿<div class="space-y-3">
+  <div  class="">
+      <label class="text-4 text-slate-300 font-bold" >
+        Alerts
+    </label>
+    <AlertCard Title="All Clear!" >
+      <Left>
+        <Icon content=@Icons.ArrowRight />
+      </Left>
+      <Body>
+        <p class="text">The cluster looks healthy</p>
+      </Body>
+    </AlertCard>
+  </div>
 
-@code {
+  <hr class="border-b border-slate-500 w-100" />
+  <div  class="">
+       <label class="text-4 text-slate-300 font-bold" >
+    Current Active Events
+  </label>
+   <AlertCard Type=@StyleType.Outline >
+      <Body>
+        <p class="text"> No Active Events</p>
 
-}
+      </Body>
+    </AlertCard>
+    </div>
+      <div  class="space-y-1">
+     <label class="text-4 text-slate-300 font-bold mt-2" >
+      Past Events
+  </label>
+    </div>
+
+
+
+  
+</div>
