--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -6,8 +6,8 @@
 @inherits LayoutComponentBase
 
 <div class="mainlayout " >
-  <div class="containermain">
-      <main class="main bg-bg text-slate-50 justify-center grid font-sans ">
+  <div class="containermain text-slate-50  font-sans antialiased">
+      <main class="main bg-bg justify-center grid">
               @Body
       </main>
        <div class="bottom">
@@ -17,7 +17,7 @@
 
 </div>
 
-<div class="top-row px-4" style="display: none">
+<div class="top-row px-4 " style="display: none">
     <AuthorizeView>
         <Authorized>
             <form method="get" action="logout">
