--- a/Services/neon-dashboard/Styles/variables.css
+++ b/Services/neon-dashboard/Styles/variables.css
@@ -5,12 +5,16 @@
     --c-fg: #eee;
     /*typescale*/
     --base: 16px;
-    --f1: 0.625rem;
-    --f2: 0.750rem;
-    --f3: 0.875rem;
-    --f4: 1.062rem;
-    --f5: 1.5rem;
+    --f0: 0.562rem;
+    --f1: 0.688rem;
+    --f2: 0.812rem;
+    --f3: 1rem;
+    --f4: 1.188rem;
+    --f5: 1.438rem;
+    --f6: 1.750rem;
+    --f7: 2.500rem;
+    --f8: 3.000rem;
     --shadow: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
     --c-bg: #0B0E15;
-    --c-card: 1E293B;
+    --c-card: #1E293B;
 }
