--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -7,8 +7,10 @@
 @inherits PageBase
 
 <PageBase PageTitle="@PageTitle" />
-<div class="container w-screen grid grid-cols-12 gap-3 mt-5"> 
-
+<div class="container w-screen grid grid-cols-12 gap-3 my-5"> 
+  <div class="h-[3rem]">
+      <Logo />
+  </div>
 </div>
 
 <div class="container w-screen grid grid-cols-12 gap-3">
