--- a/Services/neon-dashboard/Shared/Components/AlertCard.razor
+++ b/Services/neon-dashboard/Shared/Components/AlertCard.razor
@@ -1,4 +1,4 @@
-﻿<div class="py-2 px-3 space-x-1 rounded flex w-full @CardStyle[Type] @(Body!= null ? "" : "items-center")">
+﻿<div class="py-2 px-4 space-x-1 rounded-4 flex w-full @CardStyle[Type] @(Body!= null ? "" : "items-center")">
   @Left
   <div class="">
         @if (Title != "")
