--- a/Services/neon-dashboard/App.razor
+++ b/Services/neon-dashboard/App.razor
@@ -16,13 +16,19 @@
                      }
                  </NotAuthorized>
                    <Authorizing>
-                    Loading...
+                       <main class="w-screen h-screen place-items-center">
+                        <p class="text-5">Loading... </p>
+
+                      </main>
                    </Authorizing>
                </AuthorizeRouteView>
       </Found>
       <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
-              <p>Sorry, there's nothing at this address.</p>
+              <main class="w-screen h-screen place-items-center">
+                <p class="text-7">Page not found! </p>
+
+              </main>
           </LayoutView>
       </NotFound>
   </Router>
