--- a/Services/neon-dashboard/Shared/MainLayout.razor
+++ b/Services/neon-dashboard/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 @inherits LayoutComponentBase
 
 <div class="mainlayout " >
-  <div class="containermain text-slate-50  font-sans antialiased">
+  <div class="containermain text-slate-50  font-sans antialiased tracking-wide">
       <main class="main bg-bg justify-center grid">
               @Body
       </main>
